# weekly

./: Cargo.toml  NOTES.txt
src/: cal.rs  datetools.rs  grid.rs  instructions.rs  lib.rs  line.rs  main.rs  pdfutils.rs  proxies.rs  rect.rs  sizes.rs  units.rs  weeks.rs
src/grid/: builder.rs  mod.rs
src/oldstuff/: cal.rs  line.rs  rect.rs
src/oldstuff/shape/: line.rs
src/pdfutils/: font_map.rs  font_proxy.rs  mod.rs  sizes.rs  text_context.rs
src/shapes/: circle.rs  line.rs  mod.rs  rect.rs
src/tgrid/: description.rs  mod.rs  renderparams.rs
