[package]
name = "weekly"
version = "0.1.0"
authors = ["gmadrid"]
edition = "2018"

[dependencies]
argh = "0.1.4"
chrono = "0.4.19"
image = "0.23.14"
imageproc = "0.22.0"
printpdf = "0.3.4"
thiserror = "1.0.30"

[[bin]]
name = "active"

[[bin]]
name = "daily"

[[bin]]
name = "monthlies"

[[bin]]
name = "projects"

[[bin]]
name = "tester"

[[bin]]
name = "remtest"
