[package]
name = "weekly"
version = "0.1.0"
authors = ["gmadrid"]
edition = "2018"

[dependencies]
argh = "0.1.4"
chrono = "0.4.19"
lazy_static = "1.4.0"
printpdf = "0.3.4"
thiserror = "1.0.30"

[[bin]]
name = "active"

[[bin]]
name = "daily"

[[bin]]
name = "monthlies"

[[bin]]
name = "projects"

[[bin]]
name = "magic"

[[bin]]
name = "tester"

[[bin]]
name = "remtest"
